# ros2-industrial-simulator-final

./: .gitignore  README.md  Scara Assembly1arm_base_linkLink_4_5000_1.000000_1.000000.ikcache  handoff.md
src/bobby/: CMakeLists.txt  package.xml
src/bobby/config/: joint_names_bobby.yaml
src/bobby/launch/: display.launch  gazebo.launch  view_robot.launch.py
src/bobby/meshes/: TCP.STL  base_link.STL  end_eff_1.STL  end_eff_2.STL  finger_left.STL  gen_gripper_meshes.py  gripper_base.STL  gripper_flange.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_8.STL
src/bobby/rviz/: default_view.rviz
src/bobby/scripts/: gen_bobby_gazebo.py
src/bobby/urdf/: bobby.csv  bobby.urdf  bobby_gazebo.urdf  bobby_gripper_link6.urdf
src/bobby_moveit_config/: package.xml  (+1 more)
src/scara_robot_pkg/: README.md  package.xml  setup.cfg  setup.py
src/scara_robot_pkg/config/: bobby_waypoints.yaml  combined.srdf  combined_controllers.yaml  dual_cell_sequence.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pick_place_joints.yaml
src/scara_robot_pkg/launch/: pick_place_pipeline.launch.py  scara_conveyor_gazebo.launch.py  view_robot.launch.py
src/scara_robot_pkg/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  base_link.STL
src/scara_robot_pkg/resource/: scara_conveyor_gazebo.launch.py
src/scara_robot_pkg/rviz/: default_view.rviz
src/scara_robot_pkg/scara_robot_pkg/: bobby_pick_place.py  dual_cell_cycle.py  move_joints.py  pick_place_cycle.py  scene_publisher.py  sonar_belt_stopper.py
src/scara_robot_pkg/scripts/: gen_combined_gazebo.py
src/scara_robot_pkg/urdf/: Scara Assembly urdf 1.csv  combined_gazebo.urdf  drop_box.urdf  pedestal.urdf  scara_assembly.urdf  scara_gazebo.urdf.xacro  scara_ros2_control_gazebo.xacro
src/scara_robot_pkg/worlds/: two_conveyors.world
(+50 files in other folders)
